--- a/MyHouseKeepingBook/MyHouseKeepingBook/MyHouseKeepingBook.csproj
+++ b/MyHouseKeepingBook/MyHouseKeepingBook/MyHouseKeepingBook.csproj
@@ -57,6 +57,11 @@
     <Compile Include="ItemForm.Designer.cs">
       <DependentUpon>ItemForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MoneyDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MoneyDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -74,6 +79,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="MoneyDataSet.xsc">
+      <DependentUpon>MoneyDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MoneyDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MoneyDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="MoneyDataSet.xss">
+      <DependentUpon>MoneyDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
